tests/src/frontend/typechecking/invalid/inherit_untracked3.sk
// but not ok to override tracked with untracked
untracked fun main(): void {
  print_raw(Y().foo())
}

base class X {
  overridable fun foo(): String {
    "I'm X"
  }
}

class Y() extends X {
  untracked fun foo(): String {
    "I'm Y"
  }
}
